--- a/meuProjetinho/estilo/style.css
+++ b/meuProjetinho/estilo/style.css
@@ -2,15 +2,92 @@ html {
   background: #5c789f;
   color: #ffffff;
   text-align: center;
-  font-family: "Roboto", Helvetica, sans-serif;
+  font-family: "Roboto", "Helvetica", "sans-serif";
+}
+
+body{
+  height:200px;
 }
 
 h1{
   margin-bottom: 20px;
   text-transform: uppercase;
-  font-family: "Roboto Condensed", Helvetica, sans-serif;
   font-weight: 300;
   font-size: 30pt;
+}
+
+.menu{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  transition: 0.6s;
+}
+.menu.open{
+  transform: rotate(360deg);
+  transition: 0.6s;
+}
+
+#infos{
+  position: absolute;
+  top: 85px;
+  right: 10px;
+  width: 150px;
+  height: 250px;
+  border-radius: 15px;
+  z-index: 120;
+  font-size: 100%;
+  text-align: left;
+  color: gray;
+  background-color: white;
+}
+
+.principal{
+  position: relative;
+  top: -840px;
+  width: 1606px;
+  height: 798px;
+}
+
+#janela1{
+  left: 355px;
+  top: 475px;
+}
+#janela2{
+  left: 205px;
+  top: 245px;
+}
+#janela3{
+  left: 620px;
+  top: 237px;
+}
+#janela4{
+  left: 900px;
+  top: 170px;
+}
+#janela5{
+  left: 940px;
+  top: 320px;
+}
+#janela6{
+  left: 690px;
+  top: 420px;
+}
+#janela7{
+  left: 1140px;
+  top: 590px;
+}
+#janela1, #janela2, #janela3, #janela4, #janela5, #janela6, #janela7{
+  z-index: 80;
+}
+
+#janelaInfo{
+  position: relative;
+  top: -20px;
+  width: 80%;
+  height: 80%;
+  border-radius: 30px;
+  background-color: white;
+  z-index: 99;
 }
 
 #divDaLinhaDoTempo{
@@ -32,59 +109,30 @@ h1{
 .BolaDaLinha3{position: relative; left: -345px; z-index: 80;}
 .BolaDaLinha4{position: relative; top: 0px; left: 297px; z-index: 90;}
 
-.janela{
-  left: 355px;
-  top: 475px;
+.rosa{
+  position: relative;
+  left: -525px;
+  bottom: -600px;
+  transition: 1s;
+  z-index: 70;
 }
-.janela2{
-  left: 205px;
-  top: 245px;
+.rosa.open{
+  transform: rotate(315deg);
+  transition: 1s;
+  z-index: 130;
 }
-.janela3{
-  left: 620px;
-  top: 237px;
-}
-.janela4{
-  left: 900px;
-  top: 170px;
-}
-.janela5{
-  left: 940px;
-  top: 320px;
-}
-.janela6{
-  left: 690px;
-  top: 420px;
-}
-.janela7{
-  left: 1140px;
-  top: 590px;
-}
-.janela, .janela2, .janela3, .janela4, .janela5, .janela6, .janela7{
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  border-radius: 100%;
-  transition: 0.7s;
-  z-index: 80;
-}
-.janela:hover,.janela2:hover, .janela3:hover, .janela4:hover, .janela5:hover, .janela6:hover, .janela7:hover{
-  left: 10%;
-  top: 25%;
+
+#professores{
+  position: relative;
+  top: -20px;
   width: 80%;
   height: 80%;
-  transition: 0.4s;
   border-radius: 30px;
   background-color: white;
-  opacity: 0.8;
-  transition: 0.7s;
   z-index: 99;
 }
 
-.rosa{
-  z-index: 99;
-}
-
+/*
 .distribution-map {
   position: relative;
   width: 100%;
@@ -92,3 +140,4 @@ h1{
   box-sizing: border-box;
   margin: 0 auto;
 }
+*/
